--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dead-or-not-cli",
+  "name": "dead-or-alive-cli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dateformat": "^3.0.3",
     "os-locale": "^3.0.1",
